[tool.poetry]
name = "spark-examples"
version = "0.1.0"
description = ""
authors = ["Hernán Vignolo <vignolo.hernan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
